[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "netlasso"
version = "1.0.0"
description = "Reddit Data Analysis Toolkit."
authors = ["Richard Mwewa <rly0nheart@duck.com>"]
readme = "README.md"
license = "MIT License"
homepage = "https://pypi.org/project/netlasso"
documentation = "https://github.com/rly0nheart/netlasso/wiki"
repository = "https://github.com/rly0nheart/netlasso"
keywords = ["netlas", "netlasio", "iot"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Information Security",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.10"
netlas = "*"
plyer = "*"
rich = "*"

[tool.poetry.scripts]
netlasso = "netlasso.netlasso:on_call"
