[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "netlasso"
version = "1.4.0"
description = "Perform advanced searches for internet-connected (IoT) devices based on user-provided search queries."
authors = ["Richard Mwewa <rly0nheart@duck.com>"]
readme = "README.md"
license = "MIT License"
homepage = "https://pypi.org/project/netlasso"
documentation = "https://github.com/rly0nheart/netlasso/blob/master/README.md"
repository = "https://github.com/rly0nheart/netlasso"
keywords = ["iot", "internet-of-things", "netlas-io-api", "netlas-io", "netlas"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "*"
rich = "*"
rich-argparse = "*"

[tool.poetry.scripts]
netlasso = "netlasso.netlasso:on_query"
